objects/RFP_Team__c.object
<CustomObject>
    <fields>
        <fullName>RFP_Team_Legacy_ID__c</fullName>
        <label>RFP Team Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFP_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <label>RFP</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipLabel>RFP Teams</relationshipLabel>
        <relationshipName>RFP_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member_Role__c</fullName>
        <label>Team Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RFP Manager</fullName>
                </value>
                <value>
                    <fullName>RFP Writer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RFP Team</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RFP Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>